docs/i18n/ko/docusaurus-plugin-content-docs/version-4.0.0-beta.3/api/Camera.mdx
import Translate, {translate} from '@docusaurus/Translate';



```ts
class Camera
```
뷰포트 내에서의 실제 움직임을 담당하는 컴포넌트

<div className="container">
    <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
    <div className="row"><div className="col col--6"><a href="#element">element</a><br/><a href="#position">position</a><br/><a href="#alignPosition">alignPosition</a><br/><a href="#offset">offset</a><br/><a href="#range">range</a><br/><a href="#rangeDiff">rangeDiff</a><br/><a href="#visiblePanels">visiblePanels</a><br/><a href="#visibleRange">visibleRange</a><br/><a href="#anchorPoints">anchorPoints</a><br/><a href="#controlParams">controlParams</a><br/><a href="#atEdge">atEdge</a><br/><a href="#size">size</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#updateRange">updateRange</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#lookAt">lookAt</a><br/><a href="#getPrevAnchor">getPrevAnchor</a><br/><a href="#getNextAnchor">getNextAnchor</a><br/><a href="#findAnchorIncludePosition">findAnchorIncludePosition</a><br/><a href="#findNearestAnchor">findNearestAnchor</a><br/><a href="#clampToReachablePosition">clampToReachablePosition</a><br/><a href="#canReach">canReach</a><br/><a href="#canSee">canSee</a><br/><a href="#updateAlignPos">updateAlignPos</a><br/><a href="#updateAnchors">updateAnchors</a><br/><a href="#updatePosition">updatePosition</a><br/><a href="#resetNeedPanelHistory">resetNeedPanelHistory</a></div></div>
  </div>

## Constructor
```ts
new Camera()
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
||Partial&lt;CameraOptions&gt;|yes|{}||


## Properties

### element {#element}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

카메라(`.flicking-camera`) 엘리먼트

**Type**: HTMLElement
















### position {#position}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

Camera의 현재 좌표

**Type**: number
















### alignPosition {#alignPosition}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널의 정렬 기준 위치. 뷰포트 내에서 [Panel](Panel)의 [alignPosition](Panel#alignPosition)이 위치해야 하는 곳입니다

**Type**: number
















### offset {#offset}

<div className="bulma-tags">




</div>

Camera의 좌표 오프셋. [renderOnlyVisible](Flicking#renderOnlyVisible) 옵션을 위해 사용됩니다.

**Type**: number

**Default**: 0














### range {#range}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

Camera의 [position](Camera#position)이 도달 가능한 범위

**Type**: object








|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|min|number|최소 위치|
|min|number|최대 위치|







### rangeDiff {#rangeDiff}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

Camera가 도달 가능한 최소/최대 좌표의 차이

**Type**: number
















### visiblePanels {#visiblePanels}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

현재 보이는 패널들의 배열

**Type**: Array&lt;[Panel](Panel)&gt;
















### visibleRange {#visibleRange}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

현재 위치에서 보이는 범위

**Type**: object








|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|min|number|최소 위치|
|min|number|최대 위치|







### anchorPoints {#anchorPoints}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

카메라가 도달 가능한 [AnchorPoint](AnchorPoint)의 목록

**Type**: Array&lt;[AnchorPoint](AnchorPoint)&gt;
















### controlParams {#controlParams}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

[AxesController](AxesController)를 업데이트하기 위한 현재 Camera 패러미터들

**Type**: object








|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|range|object|Camera가 도달 가능한 범위([range](Camera#range))|
|position|number|현재 좌표|
|circular|boolean|[circular](Flicking#circular)옵션 활성화 여부|







### atEdge {#atEdge}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

현재 카메라가 도달 가능한 범위의 최소 혹은 최대점을 넘어섰는지를 나타냅니다

**Type**: boolean
















### size {#size}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

뷰포트 크기를 반환합니다

**Type**: number
















### align {#align}

<div className="bulma-tags">




</div>

[alignPosition](Camera#alignPosition)이 뷰포트 엘리먼트 내의 어디에 위치해야 하는지를 나타내는 값

**Type**: [Constants.ALIGN](Constants:ALIGN) \| string \| number
















## Methods

### updateRange {#updateRange}

<div className="bulma-tags">




</div>

Camera의 [range](Camera#range)를 업데이트합니다





**Returns**: this







**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](Constants#ERROR_CODE) [init](Camera#init)이 이전에 호출되지 않은 경우





### init {#init}

<div className="bulma-tags">




</div>

Camera를 초기화합니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|no||Flicking의 인스턴스|


**Throws**: [FlickingError](FlickingError)

[VAL_MUST_NOT_NULL](Constants#ERROR_CODE) 뷰포트 엘리먼트 내부에 카메라 엘리먼트(`.flicking-camera`)가 존재하지 않을 경우





### destroy {#destroy}

<div className="bulma-tags">




</div>

Camera를 초기 상태로 되돌립니다





**Returns**: void













### lookAt {#lookAt}

<div className="bulma-tags">




</div>

해당 좌표로 이동하고, CSS transform을 적용합니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|pos|number|no||움직일 위치|


**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](Constants#ERROR_CODE) [init](Camera#init)이 이전에 호출되지 않은 경우





### getPrevAnchor {#getPrevAnchor}

<div className="bulma-tags">




</div>

주어진 [AnchorPoint](AnchorPoint)의 이전 [AnchorPoint](AnchorPoint)를 반환합니다
존재하지 않을 경우 `null`을 반환합니다





**Returns**: [AnchorPoint](AnchorPoint) \| null
- 이전 [AnchorPoint](AnchorPoint)



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|anchor|[AnchorPoint](AnchorPoint)|no||기준 [AnchorPoint](AnchorPoint)|








### getNextAnchor {#getNextAnchor}

<div className="bulma-tags">




</div>

주어진 [AnchorPoint](AnchorPoint)의 다음 [AnchorPoint](AnchorPoint)를 반환합니다
존재하지 않을 경우 `null`을 반환합니다





**Returns**: [AnchorPoint](AnchorPoint) \| null
- 다음 [AnchorPoint](AnchorPoint)



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|anchor|[AnchorPoint](AnchorPoint)|no||기준 [AnchorPoint](AnchorPoint)|








### findAnchorIncludePosition {#findAnchorIncludePosition}

<div className="bulma-tags">




</div>

주어진 좌표를 포함하는 [AnchorPoint](AnchorPoint)를 반환합니다
주어진 좌표를 포함하는 [AnchorPoint](AnchorPoint)가 없을 경우 `null`을 반환합니다





**Returns**: [AnchorPoint](AnchorPoint) \| null
- 해당 좌표를 포함하는 [AnchorPoint](AnchorPoint)



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|no||확인할 좌표|








### findNearestAnchor {#findNearestAnchor}

<div className="bulma-tags">




</div>

해당 좌표에서 가장 가까운 [AnchorPoint](AnchorPoint)를 반환합니다
[AnchorPoint](AnchorPoint)가 하나도 없을 경우 `null`을 반환합니다





**Returns**: [AnchorPoint](AnchorPoint) \| null
- 해당 좌표에 가장 인접한 [AnchorPoint](AnchorPoint)



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|no||확인할 좌표|








### clampToReachablePosition {#clampToReachablePosition}

<div className="bulma-tags">




</div>

주어진 좌표를 Camera가 도달 가능한 범위 사이의 값으로 만듭니다





**Returns**: number
- 범위 제한된 좌표



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|no||범위를 제한할 좌표|








### canReach {#canReach}

<div className="bulma-tags">




</div>

해당 [Panel](Panel)이 Camera가 도달 가능한 범위 내에 있는지를 반환합니다





**Returns**: boolean
- 도달 가능한 범위 내에 해당 패널이 존재하는지 여부



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|panel|[Panel](Panel)|no||확인할 [Panel](Panel)의 인스턴스|








### canSee {#canSee}

<div className="bulma-tags">




</div>

현재 좌표에서 해당 패널 엘리먼트를 볼 수 있는지 여부를 반환합니다





**Returns**: boolean
- 현재 위치에서 해당 패널 엘리먼트가 보이는지 여부



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|panel|[Panel](Panel)|no||확인할 [Panel](Panel)의 인스턴스|








### updateAlignPos {#updateAlignPos}

<div className="bulma-tags">




</div>

Camera의 [alignPosition](Camera#alignPosition)을 업데이트합니다





**Returns**: this













### updateAnchors {#updateAnchors}

<div className="bulma-tags">




</div>

Camera의 [anchorPoints](Camera#anchorPoints)를 업데이트합니다





**Returns**: this







**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](Constants#ERROR_CODE) [init](Camera#init)이 이전에 호출되지 않은 경우





### updatePosition {#updatePosition}

<div className="bulma-tags">




</div>

resize 이후에 position을 업데이트합니다





**Returns**: this







**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](Constants#ERROR_CODE) [init](Camera#init)이 이전에 호출되지 않은 경우





### resetNeedPanelHistory {#resetNeedPanelHistory}

<div className="bulma-tags">




</div>

발생한 [needPanel](Flicking#event-needPanel) 이벤트들을 초기화하여 다시 발생할 수 있도록 합니다





**Returns**: this














